--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,7 @@
             {%endblock content%}
         </main>
         {% block scripts%}
-            <script src='{% static "js/index.js" %}'></script>
+            <script src='{% static "js/index.js" %}' type="module"></script>
         {% endblock scripts%}
     </body>
 </html>
